--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "markdown-it": "^8.4.2",
     "markdown-it-figure-caption": "^0.1.0",
     "markdown-it-footnote": "^3.0.1",
+    "markdown-it-multimd-table": "^3.2.0-rc.1",
     "markdown-it-prism": "^2.0.2",
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
