--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack": "^4.32.2"
   },
   "devDependencies": {
+    "@vuepress/plugin-google-analytics": "^1.3.1",
     "css-loader": "^2.1.1",
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
