--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sass-loader": "^7.1.0",
     "tailwindcss": "^1.0.2",
     "vue": "^2.6.10",
+    "vuepress-plugin-sitemap": "^2.3.1",
     "vuetify": "^1.5.14",
     "webpack": "^4.32.2"
   },
